syntax = "proto3";

package storage;

option java_package = "com.github.inet.storage";
option java_outer_classname = "StorageMetadataProtos";

message StorageMetadata {

  string etag = 1;

  int32 statusCode = 2;
}
